--- a/tiles/BaseCamp-ProjectInfo/public/action.html
+++ b/tiles/BaseCamp-ProjectInfo/public/action.html
@@ -14,17 +14,39 @@
 
 
 <body>
+<div id="j-card-authentication" class="j-card" style='display: none'>
+    <h2>Expanded Project Information ..</h2>
+
+    <p>
+        <p>The remote system (Basecamp) requires you to grant access before proceeding</p>
+    <!---
+        Project:
+        <label id="projectA"><b>Placeholder for Project</b> </label>
+        <br>
+        Description:
+        <label id="descriptionA"><b>Placeholder for Description</b> </label>
+        <br>
+        <a id="BasecampLinkA" href="https://basecamp.com" target="_blank" >Vist this project at Basecamp</a>
+    -->
+    </p>
+    <br><br>
+    <button id="oauth">Grant Access</button>
+    <button id="btn_doneA">Exit</button>
+
+</div>
 
 
-<div class="j-card">
+<div id="j-card-action" class="j-card" style='display: none'>
    <h2>Expanded Project Information ..</h2>
 
    <p>
-       Project:
-       <input type="text" id="project">
-       <br>
-       Description:
-       <input type="text" id="description">
+       <h3><u>Project:</u></h3><br>
+       <label id="projectB">Placeholder for Project</label>
+       <br><br>
+       <h3><u>Description:</u></h3>  &nbsp;&nbsp; <br>
+       <label id="descriptionB">Placeholder for Description</label>
+       <br><br><br>
+       <a id="BasecampLinkB" href="https://basecamp.com" target="_blank" >Vist this project at Basecamp</a>
 
    </p>
 
