first pass at discussions and uploading a simple document, along with other tweeks

--- a/tiles/BaseCamp-ToDoList/public/action.html
+++ b/tiles/BaseCamp-ToDoList/public/action.html
@@ -37,9 +37,9 @@
         <h3><span id="title">Expanded Project To Do Information</span></h3>
         <p>
         <h5>Project</h5>
-        <a id="BasecampLinkB" href="https://basecamp.com" target="_blank" >Vist this project at Basecamp</a>
+        <a id="BasecampLinkB" href="https://basecamp.com" target="_blank" >Visiut this project at Basecamp</a>
         <h5>Description</h5>
-        <span id="descriptionB">Placeholder for Description</span>)
+        <span id="descriptionB">Placeholder for Description</span>
         <h5>To Do List Name</h5>
         <span id="todoListB">Placeholder for To Do List</span>
         <h5>To Do Task</h5>
@@ -73,12 +73,14 @@
             </div>
             <label>Share With</label>
             <p><small>Leave this blank to share to this place.</small></p>
-            <input type="text" id="people" data-provide="typeahead" style="resize:none">
+            <label>User to target:</label><input type="text" id="people" data-provide="typeahead" style="resize:none">
+            <br>
             <div class="container-fluid" id="shared-people">
                 <!--Shared People-->
             </div>
+            <br>
             <label>Subject:</label>
-            <input type="text" id="subject">
+            <input type="text" id="subject"> <br>
             <label>Message:</label>
             <textarea class="span6" rows=3 id="message" style="resize:none"></textarea>
             <br>
