--- a/tiles/BaseCamp-ProjectCalendar/public/action.html
+++ b/tiles/BaseCamp-ProjectCalendar/public/action.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="{{{host}}}/stylesheets/style.css">
+    <link rel="stylesheet" type="text/css" href="{{{host}}}/stylesheets/bootstrap.min.css">
     <script src="{{{host}}}/javascripts/jquery-1.8.3.js"></script>
     <script src="{{{host}}}/javascripts/oauth2client.js"></script>
     <script src="{{{host}}}/BaseCamp-ProjectCalendar/javascripts/action.js"></script>
@@ -29,21 +29,37 @@
 
 
 <div id="j-card-action" class="j-card" style='display: none'>
-    <h2>Expanded Project Event Information ..</h2>
+    <div class="container-fluid" id="todo-panel">
+        <p>
+        <h3>Expanded Project Event Information ..</h3>
+        <h5>Project</h5>
+        <a id="basecampLinkB" href="https://basecamp.com" target="_blank" >Visit this project at Basecamp</a>
+        <h5>Project Description</h5>
+        <span id="descriptionB">Placeholder for Project Description</span>
+         </p>
+        <p>
+        <h3>Event Information</h3>
+        <label>Title:&nbsp;&nbsp;</label><span id="eventTitleB"><strong>Placeholder for Event Title</strong></span><br>
+        <label>Description:&nbsp;&nbsp;</label><span id="eventDescriptionB">Placeholder for Event Description</span> <br>
+        <label>Date/Time:&nbsp;&nbsp;</label><span id="eventDateTimeB">Placeholder for Event Date/Time</span>
+         </p>
+        <p>
+     </div>
 
-    <p>
-    <h3><u>Project:</u></h3><br>
-    <label id="projectB">Placeholder for Project</label>
-    <br><br>
-    <h3><u>Description:</u></h3>  &nbsp;&nbsp; <br>
-    <label id="descriptionB">Placeholder for Description</label>
-    <br><br><br>
-    <a id="BasecampLinkB" href="https://basecamp.com" target="_blank" >Vist this project at Basecamp</a>
-
-    </p>
-
-    <button id="btn_done">Close Window</button>
-
+     <div class="container-fluid" id="document-panel">
+        <div class="alert-area" style="display:none">
+            <!-- area for alerts to appear -->
+        </div>
+        <label>Document to Upload:</label><br>
+        <label>Title:</label>
+        <input type="text" id="title">
+        <br>
+        <label>Content:</label>
+        <textarea cols="50" rows=5 id="content" style="resize:none"></textarea>
+        </p>
+        <button class="btn btn-primary" id="btn_upload">Post Document</button>
+        <button class="btn btn-primary" id="btn_done">Close Window</button>
+     </div>
 </div>
 
 </body>
