--- a/tiles/BaseCamp-ProjectInfo/public/action.html
+++ b/tiles/BaseCamp-ProjectInfo/public/action.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="{{{host}}}/stylesheets/style.css">
+    <link rel="stylesheet" type="text/css" href="{{{host}}}/stylesheets/bootstrap.min.css">
     <script src="{{{host}}}/javascripts/jquery-1.8.3.js"></script>
     <script src="{{{host}}}/javascripts/oauth2client.js"></script>
     <script src="{{{host}}}/BaseCamp-ProjectInfo/javascripts/action.js"></script>
@@ -37,20 +37,20 @@
 
 
 <div id="j-card-action" class="j-card" style='display: none'>
-   <h2>Expanded Project Information ..</h2>
+   <h3>Expanded Project Information ..</h3>
 
    <p>
-       <h3><u>Project:</u></h3><br>
+       <h5><u>Project:</u></h5><br>
        <label id="projectB">Placeholder for Project</label>
        <br><br>
-       <h3><u>Description:</u></h3>  &nbsp;&nbsp; <br>
+       <h5><u>Description:</u></h5>  &nbsp;&nbsp; <br>
        <label id="descriptionB">Placeholder for Description</label>
        <br><br><br>
        <a id="BasecampLinkB" href="https://basecamp.com" target="_blank" >Vist this project at Basecamp</a>
 
    </p>
 
-   <button id="btn_done">Close Window</button>
+   <button class="btn btn-primary"id="btn_done">Close Window</button>
 
 </div>
 
