--- a/tiles/BaseCamp-ProjectCalendar/public/action.html
+++ b/tiles/BaseCamp-ProjectCalendar/public/action.html
@@ -22,8 +22,8 @@
 
     </p>
     <br><br>
-    <button id="oauth">Grant Access</button>
-    <button id="btn_doneA">Exit</button>
+    <button class="btn btn-primary" id="oauth">Grant Access</button>
+    <button class="btn btn-primary" id="btn_doneA">Exit</button>
 
 </div>
 
@@ -51,8 +51,8 @@
             <!-- area for alerts to appear -->
         </div>
         <label>Document to Upload:</label><br>
-        <label>Title:</label>
-        <input type="text" id="title">
+        <label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Title:</label>
+        <input type="text" id="title" size=48>
         <br>
         <label>Content:</label>
         <textarea cols="50" rows=5 id="content" style="resize:none"></textarea>
