--- a/tiles/BaseCamp-ToDoList/public/action.html
+++ b/tiles/BaseCamp-ToDoList/public/action.html
@@ -41,7 +41,9 @@
         <h5>Description</h5>
         <span id="descriptionB">Placeholder for Description</span>
         <h5>To Do List Name</h5>
-        <span id="todoListB">Placeholder for To Do List</span>
+        <span id="todoListName">Placeholder for To Do List Name</span>
+        <h5>To Do List Description</h5>
+        <span id="todoListDescription">Placeholder for To Do List Description</span>
         <h5>To Do Task</h5>
         <span id="todoNameB">Placeholder for To Do Task</span>
         </p>
@@ -71,20 +73,23 @@
             <div class="alert-area" style="display:none">
                 <!-- area for alerts to appear -->
             </div>
+            <!--
             <label>Share With</label>
             <p><small>Leave this blank to share to this place.</small></p>
             <label>User to target:</label><input type="text" id="people" data-provide="typeahead" style="resize:none">
             <br>
             <div class="container-fluid" id="shared-people">
-                <!--Shared People-->
+
             </div>
             <br>
             <label>Subject:</label>
             <input type="text" id="subject"> <br>
-            <label>Message:</label>
-            <textarea class="span6" rows=3 id="message" style="resize:none"></textarea>
-            <br>
-            <button class="btn btn-primary" id="create-discussion">Create Discussion</button>
+            -->
+            <p>
+            <label>Comment:</label>
+            <textarea class="span6" cols=50 rows=5 id="message" style="resize:none"></textarea>
+            </p>
+            <button class="btn btn-primary" id="create-discussion">Post comment</button>
             <button class="btn btn-primary" id="btn_done">Close Window</button>
         </div>
     </div>
