--- a/tiles/BaseCamp-Activity/public/configuration.html
+++ b/tiles/BaseCamp-Activity/public/configuration.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="{{{host}}}/stylesheets/style.css">
+    <link rel="stylesheet" type="text/css" href="{{{host}}}/stylesheets/bootstrap.min.css">
     <script src="{{{host}}}/javascripts/jquery-1.8.3.js"></script>
     <script src="{{{host}}}/javascripts/oauth2client.js"></script>
     <script src="{{{host}}}/BaseCamp-Activity/javascripts/main.js"></script>
@@ -14,23 +14,24 @@
 <body>
 
 <div id="j-card-authentication" class="j-card" style='display: none'>
-    <p>The remote system (GitHub) requires you to grant access before proceeding.</p>
-    <button id="oauth">Grant Access</button>
+    <p>The remote system (Basecamp) requires you to grant access before proceeding.</p>
+    <button class="btn btn-primary" id="oauth">Grant Access</button>
 </div>
 
 <div id="j-card-configuration" class="j-card" style="...">
-    <h2>Configuration</h2>
+    <div class="container-fluid">
+    <h4>Basecamp Project Activity Stream Configuration</h4>
 
     <p>
-        Post Activity:
-        <input type="radio" value="on" name="post_activity">on
-        <input type="radio" value="off" name="post_activity">off
+        <label>Post Activity:</label>
+        <input type="radio" id="on" name="post_activity" checked><label for="on">on</label>
+        <input type="radio" id="off" name="post_activity"><label for="off">off</label>
     </p>
     <p>
         Project:  <select id="projectList"></select>
     </p>
-    <button id="btn_submit">Submit</button>
-
+    <button class="btn btn-primary" id="btn_submit">Submit</button>
+    </div>
 </div>
 
 </body>
