--- a/tiles/BaseCamp-ProjectCalendar/public/configuration.html
+++ b/tiles/BaseCamp-ProjectCalendar/public/configuration.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="{{{host}}}/stylesheets/style.css">
+    <link rel="stylesheet" type="text/css" href="{{{host}}}/stylesheets/bootstrap.min.css">
     <script src="{{{host}}}/javascripts/jquery-1.8.3.js"></script>
     <script src="{{{host}}}/javascripts/oauth2client.js"></script>
     <script src="{{{host}}}/BaseCamp-ProjectCalendar/javascripts/main_oauth2.js"></script>
@@ -14,11 +14,12 @@
 
 <div id="j-card-authentication" class="j-card" style='display: none'>
     <p>The remote system (Basecamp) requires you to grant access before proceeding.</p>
-    <button id="oauth">Grant Access</button>
+    <button class="btn btn-primary" id="oauth">Grant Access</button>
 </div>
 
 <div id="j-card-configuration" class="j-card" style='display: none'>
-    <h2>Basecamp Project Calendar Tile Configuration</h2>
+    <div class="container-fluid">
+    <h4>Basecamp Project Calendar Tile Configuration</h4>
 
     <p>
 
@@ -26,8 +27,9 @@
 
     </p>
 
-    <button id="btn_done">Close</button>
+    <button class="btn btn-primary" id="btn_done">Done</button>
     </p>
+    </div>
 </div>
 
 </body>
