--- a/tiles/BaseCamp-ProjectInfo/public/action.html
+++ b/tiles/BaseCamp-ProjectInfo/public/action.html
@@ -30,8 +30,8 @@
     -->
     </p>
     <br><br>
-    <button id="oauth">Grant Access</button>
-    <button id="btn_doneA">Exit</button>
+    <button class="btn btn-primary" id="oauth">Grant Access</button>
+    <button class="btn btn-primary" id="btn_doneA">Exit</button>
 
 </div>
 
@@ -50,7 +50,7 @@
 
    </p>
 
-   <button class="btn btn-primary"id="btn_done">Close Window</button>
+   <button class="btn btn-primary" id="btn_done">Close Window</button>
 
 </div>
 
