--- a/tiles/BaseCamp-ProjectInfo/public/configuration.html
+++ b/tiles/BaseCamp-ProjectInfo/public/configuration.html
@@ -1,7 +1,7 @@
 
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="{{{host}}}/stylesheets/style.css">
+    <link rel="stylesheet" type="text/css" href="{{{host}}}/stylesheets/bootstrap.min.css">
     <script src="{{{host}}}/javascripts/jquery-1.8.3.js"></script>
     <script src="{{{host}}}/javascripts/oauth2client.js"></script>
     <script src="{{{host}}}/BaseCamp-ProjectInfo/javascripts/main_oauth2.js"></script>
@@ -15,11 +15,12 @@
 
 <div id="j-card-authentication" class="j-card" style='display: none'>
     <p>The remote system (Basecamp) requires you to grant access before proceeding.</p>
-    <button id="oauth">Grant Access</button>
+    <button class="btn btn-primary" id="oauth">Grant Access</button>
 </div>
 
 <div id="j-card-configuration" class="j-card" style='display: none'>
-    <h2>Basecamp Project Info Tile Configuration</h2>
+    <div class="container-fluid">
+    <h4>Basecamp Project Info Tile Configuration</h4>
 
     <p>
 
@@ -27,11 +28,9 @@
 
     </p>
 
-    <button id="btn_done">Close</button>
+    <button class="btn btn-primary" id="btn_done">Close</button>
     </p>
-
-
-
+    </div>
 </div>
 
 </body>
