change button for document/comment upload to Basecamp

--- a/tiles/BaseCamp-ProjectCalendar/public/action.html
+++ b/tiles/BaseCamp-ProjectCalendar/public/action.html
@@ -57,7 +57,7 @@
         <label>Content:</label>
         <textarea cols="50" rows=5 id="content" style="resize:none"></textarea>
         </p>
-        <button class="btn btn-primary" id="btn_upload">Post Document</button>
+        <button class="btn btn-primary" id="btn_upload">Post Document to Basecamp</button>
         <button class="btn btn-primary" id="btn_done">Close Window</button>
      </div>
 </div>
