--- a/tiles/BaseCamp-ToDoList/public/action.html
+++ b/tiles/BaseCamp-ToDoList/public/action.html
@@ -89,7 +89,7 @@
             <label>Comment:</label>
             <textarea class="span6" cols=50 rows=5 id="message" style="resize:none"></textarea>
             </p>
-            <button class="btn btn-primary" id="create-discussion">Post comment</button>
+            <button class="btn btn-primary" id="create-discussion">Post comment to Basecamp</button>
             <button class="btn btn-primary" id="btn_done">Close Window</button>
         </div>
     </div>
